# DS-PracticeCourt

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
field_node/: Dockerfile
field_node/app/: main.py  recovery.py  two_pc_coordinator.py
field_node/app/repositories/: booking_repository.py  field_booking_repository.py  field_repository.py
field_node/static/: index.html
field_node/static/frontend/: index.html
field_node/static/frontend/css/: booking.css  hero.css  navbar.css  sidebar.css
field_node/static/frontend/js/: app.js
frontend/: index.html
frontend/css/: tokens.css
infrastructure/: init.sql
infrastructure/diagrams/: 2pc_sequence_diagram.md  deployment_diagram.md
shared/: config.py  db.py  events.py  locks.py  logging_config.py  models.py  redis_client.py  schemas.py
tests/: test_2pc_coordinator.py  test_2pc_end2end.py  test_2pc_internal_endpoints.py  test_concurrency.py  test_fault_tolerance.py  test_temporary_hold.py  test_websocket.py
utility_node/: Dockerfile
utility_node/app/: main.py
utility_node/app/repositories/: utility_booking_repository.py  utility_repository.py
